src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600;700&display=swap');

:root {

/* color palette */
--text-grey-900:#101828;
--text-grey-500: #667085;
--link-bg: #EAECF0;

}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Inter', sans-serif;
    display: flex;
    justify-content: center;
    overflow-x: hidden;
}

main {
    padding-bottom: 24px;
}

.container {
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    margin-top: 64px;
    margin-left: 1rem;
    margin-right: 1rem;
}

/* Profile section styling */

.profile {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.profile__img {
    width: 88px;
    height: 88px;
    border-radius: 275px;
}

.profile__name {
    font-weight: 700;
    font-size: 20px;
    line-height: 30px;
    padding-top: 24px;
    padding-bottom: 56px;
}


.slack {
    display: none;
}

/* Profile section styling ends here */

/* Links styling starts here */

.links {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.links a {
  text-decoration: none;
  font-weight: 500;
  font-size: 18px;
  line-height: 28px;
  background-color: var(--link-bg);
  margin-bottom: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border-radius: 8px;
  width: 1152px;
  color: var(--text-grey-900);
  position: relative;
  transition: all .2s ease-in-out;
}

.links a:hover {
  color: var(--text-grey-500);
}

/* Links styling ends here */

/* social section styling */

.social {
  margin-bottom: 150px;
}

.social img{
  padding-left: 24px;
  cursor: pointer;
}

/* social section styling ends here */


/* Footer styling */

.footer-content {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  position: relative;
  padding-bottom: 52px;
}

.footer-content p {
  font-weight: 400;
  font-size: 14px;
  color: var(--text-grey-500);
}

.footer-content::before {
  content: '';
  position: absolute;
  bottom: 130px;
  left: 0;
  width: 100%;
  height: 1px;
  background-color: var(--link-bg);
}

/* Footer styling ends here */

/* Contact page styling starts here */

.contact-section {
  text-align: start;
  margin-top: 90px;
}

.contact-heading h1 {
  font-weight: 600;
  font-size: 36px;
  line-height: 44px;
  margin-bottom: 20px;
}

.contact-heading p {
  font-size: 20px;
  font-weight: 400;
  line-height: 30px;
  color: #475467;
  margin-bottom: 30px;
}

form {
  margin-bottom: 6rem;
  display: grid;
}

.name {
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  margin-bottom: 24px;
}

form label{
  display: block;
  font-size: 14px;
  font-weight: 500;
  padding-bottom: 6px;
}

.input::placeholder {
  padding-left: 14px;
}

input {
  padding: 10px 14px;
  border: 1px solid #D0D5DD;
  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
  border-radius: 8px;
}

.radio {
  display: flex;
  align-items: center;
}

.input[type='radio'] {
  background-color: red;
}

.radio label {
  padding-left: 10px;
}




/* media queries */


@media(max-width:890px) {
  .links a {
      width: 700px;
  }

  .social {
      margin-bottom: 90px;
  }
}


@media(max-width:480px) {
  .links a {
      width: 343px;
      font-size: 14px;
  }

  .footer-content {
      flex-direction: column;
      justify-content: center;
      gap: 2rem;
  }

  .footer-content::before {
      bottom: 230px;
  }

  .social {
      margin-bottom: 70px;
  }
} 

@media(max-width: 320px) {
  .links a {
      width: 300px;
  }
}

